--- a/assets/backend/css/style.css
+++ b/assets/backend/css/style.css
@@ -1,3 +1,40 @@
+  .navbar-notification {
+    background-color: yellow;
+    align-content: center;
+    text-align: center;
+  }
+
+  .table__category {
+    margin-left: 50%;
+  }
+
+  .right_col__mensage {
+    text-align: center;
+    font-size: 40px;
+    padding-top: 100px;
+  }
+  
+  .profile_info {
+    text-align: center;
+    width: 100%;
+  }
+
+
+  .right_col__btn {
+    float: right;
+  }
+
+  .panel__category {
+    padding-bottom: 40px;
+  }
+
+  .x_title {
+    border-bottom: none;
+  }
+
+  .table__title th {
+    vertical-align: middle !important;
+  }
 
   .olho {
     cursor: pointer;
@@ -53,4 +90,7 @@
     margin-top: 20px;
   }
 
+  .right_col__searchImg{
+    max-width: 10px;
+  }
  
