atualizações em frontend

--- a/assets/frontend/css/style.css
+++ b/assets/frontend/css/style.css
@@ -118,8 +118,8 @@ h6 {
 }
 
 .navbar-center__imgLogo {
-    width: 421px;
-    height: 89px;
+    width: 300px;
+    margin-top: 17px;
 }
 
 .navbar-center__imgCart {
